# cc_chat

./: .gitignore  .metadata  .pre-commit-config.yaml  CMakeLists.txt  README.md  cc_chat.sql  pubspec.yaml
.github/workflows/: codacy.yml  codeql.yml  dart.yml  flutter.yml  scorecards.yml
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/cc_chat/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
cc_net/: client_interface.hpp  server_interface.hpp
cc_net/utils/: common.hpp  connection.hpp  mtqueue.hpp  packet.hpp
client/: CMakeLists.txt  app_window.cpp  app_window.hpp  auth_window.cpp  auth_window.hpp  client.cpp  client.hpp  imgui_stdlib.cpp  imgui_stdlib.h  main.cpp
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  constants.dart  main.dart  user.dart
lib/chat/: chat_cupertino.dart  chat_material.dart  chat_stream.dart  message_bubble_cupertino.dart  message_bubble_material.dart
lib/login/: login_cupertino.dart  login_material.dart
lib/pages/: chat.dart  chatter_screen.dart  login.dart  material_splash.dart  sign_up.dart
lib/sign_up/: sign_up_cupertino.dart  sign_up_material.dart
lib/splash/: splash_cupertino.dart  splash_material.dart
lib/widgets/: custom_button.dart  custom_text_input.dart  custombutton.dart  customtextinput.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
relay/: cc_chat.sql  db_connection.php  get_user_by_id.php  login.php  message_count.php  message_get.php  message_send.php  sign_up.php
server/: CMakeLists.txt  main.cpp
test/: widget_test.dart
tools/: CMakeLists.txt  tool_useradd.cpp
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
